--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     
       
-        <div name="footer">
+        <div id="footer">
 
           <label>Ask me anything =></label>
           <input name ="question" type="text" size="65">
