--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       
         <div id="footer">
 
-          <label>Ask me anything =></label>
-          <input name ="question" type="text" size="65">
+          <label name="label">Ask me anything =></label>
+          <input name ="input" id ="input" type="text" size="65">
           <button onclick="updateImage()">Ask!</button>
 
         </div>
